--- a/package.json
+++ b/package.json
@@ -4,5 +4,42 @@
   "main": "index.js",
   "repository": "https://github.com/melitus/smart-city.git",
   "author": "melitus <asmelitus@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev": "nodemon",
+    "kafka": "ts-node ./src/message-broker/index.ts",
+    "build": "rimraf ./dist && tsc",
+    "copy-files": "cp -r ./src/datastore ./dist/datastore",
+    "start": " yarn build && yarn copy-files && node dist/index.js"
+  },
+  "dependencies": {
+    "ajv": "^8.17.1",
+    "axios": "^1.7.7",
+    "bluebird": "^3.7.2",
+    "body-parser": "^1.20.3",
+    "chalk": "^4.1.0",
+    "cli-table": "^0.3.11",
+    "csv-parse": "^5.6.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "http-errors": "^2.0.0",
+    "kafkajs": "^2.2.4",
+    "mongoose": "^6.3.3",
+    "node-fetch": "^3.3.2"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.2.14",
+    "@types/mocha": "^8.2.0",
+    "@types/node": "^14.14.22",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.2.1",
+    "rimraf": "^5.0.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
+  }
 }
